Botón que lleva a ver productos y fondo de corcho que no funciona

--- a/TrabajoMVC/TrabajoMVC.csproj
+++ b/TrabajoMVC/TrabajoMVC.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>921b33a2-ed12-4a77-ba17-27231e91517a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
